# bank_onboarding

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_trace_tables.py  003_add_device_id.py  004_add_identifier_hash.py  005_add_resumption_data_to_tokens.py  006_event_outbox.py  007_flow_segments.py  008_add_token_salt.py
api/: index.py
docker/postgres/: init-test-db.sql
docs/: ARCHITECTURE.md  AWS_MIGRATION.md  FLOWS_GUIDE.md
flows/: es_business.yaml  es_private.yaml  pl_business.yaml  pl_private.yaml  se_business.yaml  se_private.yaml
i18n/: markets.yaml
i18n/bundles/: ES.yaml  PL.yaml  SE.yaml  en.yaml
public/: styles.css
scripts/: install-hooks.ps1  install-hooks.sh  migrate_vercel.ps1  migrate_vercel.sh
src/onboarding/: __init__.py  config.py
templates/: base.html  duplicate_prompt.html  landing.html  processing.html  result.html  resume_prompt.html  review.html  select_country.html  step.html
templates/admin/: application_detail.html  applications.html  decisions.html  index.html  traces.html
templates/partials/: back_nav.html  progress.html  resume_link.html
tests/: conftest.py  fakes.py
tests/integration/: conftest.py  postgres_helpers.py  test_event_driven_flow.py  test_http_onboarding.py  test_postgres_e2e.py  test_postgres_http_e2e.py
tests/unit/: test_admin.py  test_answers_merge.py  test_audit_redaction.py  test_config_database_url.py  test_coordinator.py  test_decision_engine.py  test_duplicate_detection.py  (+13 more)
(+119 files in other folders)
